--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="products_fragment_label">Products Fragment</string>
     <string name="search_label">Buscar</string>
     <string name="error_message">Algo salió mal</string>
+
+    <string name="price_list"><strike>$ %1$s</strike></string>
 </resources>
